# stock_strategy_simulator

./: .gitignore  CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt  ModuleTests.cpp  SimulatorTests.cpp  StockDataParserTests.cpp  StrategyTests.cpp
Google_tests/test_data/: PAALB.json  example.json
benchmark/: Benchmarker.cpp  CMakeLists.txt
strategy_simulator_lib/: CMakeLists.txt  library.cpp  library.h
strategy_simulator_lib/include/: Data.h  HistoricData.h  IterableQueue.h  IterableStack.h  Simulator.h  StochasticOscillatorStrategy.h  StockDataParser.h  StockStrategySimulator.h  Strategy.h  Visitor.h
strategy_simulator_lib/src/: HistoricData.cpp  Simulator.cpp  StochasticOscillatorStrategy.cpp  StockDataParser.cpp  StockStrategySimulator.cpp
usage_example/: CMakeLists.txt  main.cpp
